--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -11,7 +11,7 @@
 		position: absolute;
 		margin: 0;
 		top: -15px;
-		padding: 0 1em;
+		padding: 0 0.5em;
 		display: inline-block !important;
     font-size: 1.15em;
 
@@ -169,13 +169,19 @@
 }
 
 .pane-roundtable-sessions-jump-menu .view-display-id-jump_menu {
-  margin-top: 1em;
+  margin-top: 1.5em;
 
-  @include breakpoint(398px) {
+  @include breakpoint(397px) {
     margin-top: 0;
   }
-  @include breakpoint(768px) {
-    margin-top: 1em;
+  @include breakpoint(685px) {
+    margin-top: 1.5em;
+  }
+  @include breakpoint(743px) {
+    margin-top: 0;
+  }
+  @include breakpoint(950px) {
+    margin-top: 1.5em;
   }
 }
 
